--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
         "swiper": "^7.4.1",
+        "vanillajs-datepicker": "^1.2.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
