--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "redux-thunk": "^2.4.1",
       "swiper": "^7.4.1",
       "vanillajs-datepicker": "^1.2.0",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "yup": "^0.32.11"
    },
    "scripts": {
       "start": "react-scripts start",
